--- a/rootdir/etc/init.mt6765.rc
+++ b/rootdir/etc/init.mt6765.rc
@@ -15,6 +15,10 @@ on init
     write /proc/sys/vm/page-cluster 0
     write /proc/sys/vm/swappiness 100
     write /proc/sys/vm/vfs_cache_pressure 100
+	
+    # set minfree to some decent values
+    chmod 0666 /sys/module/lowmemorykiller/parameters/minfree
+    write /sys/module/lowmemorykiller/parameters/minfree "14428,21642,43284,72140,100996,108210"
 
     # Boot time fs tune
     write /sys/block/sda/queue/iostats 0
