--- a/lights/android.hardware.light-service.RMX1941.rc
+++ b/lights/android.hardware.light-service.RMX1941.rc
@@ -1,4 +1,4 @@
-service vendor.light-default /vendor/bin/hw/android.hardware.light-service.RMX1941
+service vendor.light-hal-2-0.RMX1941 /vendor/bin/hw/android.hardware.light-service.RMX1941
     class hal
     user system
     group system
